--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@ th:hover, td:hover {
             <img id="caca" src="https://i.imgur.com/Oac6eM5.png"/>
             </div>
             </section>
-            <h1>Statistiques Annexes</h1>
         <footer>
         <section id="statitiques-id">
             <div class="table-container">
         <table>
+            <caption><h1>Statistiques Annexes</h1></caption>
         <tr>
           <th></th>
           <th scope="col">Tony</th>
