--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html lang="fr">
       <head>
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Interpol - Chasse à l'Homme</title>
@@ -76,15 +77,15 @@
     
     ul li {
         display: inline;
-        margin: 0 15px;
+        margin: 0 10px;
     }
     
     ul li a {
-        color: #cfcfcf;
+        color: #ff4c4c;
         text-decoration: none;
         font-weight: 600;
         padding: 8px 10px; /* Ajoute un peu d'espace à l'intérieur de l'encadré */
-        border: 1px solid #444; /* Bordure fine et discrète */
+        border: 1px solid #ff4c4c; /* Bordure fine et discrète */
         border-radius: 4px; /* Coins légèrement arrondis */
         transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
     }
@@ -102,9 +103,6 @@
         border-radius: 4px; /* Coins légèrement arrondis */
         transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
     }
-    /* Styles pour le tableau */
-    /* Styles spécifiques pour le tableau */
-    /* Styles spécifiques pour le tableau */
 table {
   width: 80%;
   margin: 30px auto;
