--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang="fr">
       <head>
-        <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Interpol - Chasse à l'Homme</title>
@@ -85,7 +85,7 @@
         text-decoration: none;
         font-weight: 600;
         padding: 8px 10px; /* Ajoute un peu d'espace à l'intérieur de l'encadré */
-        border: 1px solid #ff4c4c; /* Bordure fine et discrète */
+        border: 1px solid #444; /* Bordure fine et discrète */
         border-radius: 4px; /* Coins légèrement arrondis */
         transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
     }
@@ -103,6 +103,9 @@
         border-radius: 4px; /* Coins légèrement arrondis */
         transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
     }
+    /* Styles pour le tableau */
+    /* Styles spécifiques pour le tableau */
+    /* Styles spécifiques pour le tableau */
 table {
   width: 80%;
   margin: 30px auto;
@@ -129,7 +132,6 @@ th {
   text-transform: uppercase;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Ombre plus marquée pour les en-têtes */
 }
-
 td {
   background-color: #1a1a1a;
 }
@@ -297,10 +299,10 @@ th:hover, td:hover {
           </a>
           <h2 id="Grotitre">Tony Mote/AstroNoxOne</h2>
           <p>
-            <strong>Alias :</strong> Ouba Ouba / PédoNox / / Le père de Stevie dans
+            <strong><span style="color:#ff4c4c"> Alias </span> :</strong> Ouba Ouba / PédoNox / / Le père de Stevie dans
             Malcolm / PédoNox
           </p>
-          <p><strong>Antécédents :</strong></p>
+          <p><strong><span style="color:#ff4c4c"> Antécédents : </span></strong></p>
           <ol class="no-numbers">
             <p>
               <li>Vol avec arme</li>
@@ -310,7 +312,7 @@ th:hover, td:hover {
               </li>
             </p>
           </ol>
-          <p><strong>Dernière localisation :</strong> Collège Gerard Phillipe</p>
+          <p><strong><span style="color:#ff4c4c"> Dernière localisation :</span></strong> Collège Gerard Phillipe</p>
         </section>
     
         <section id="premier-fait-accusation">
